--- a/index.html
+++ b/index.html
@@ -109,12 +109,7 @@
     <p>Nossos colaboradores são especializados em várias áreas do Direito, dominando as principais leis em suas áreas de atuação </p>
 </div>
     </div>
-
-
-
-
 </div>
-
 <div id="about-data">
     <div class="data">
        <i class="bi bi-person"></i> 
@@ -138,6 +133,92 @@
      </div>
 </div>
    </section>
+
+   <!-- depoimentos -->
+   <section id="testimials" class="text-image-section">
+<div id="testimial-information" class="text-container">
+    <p class="section-subtitle">Depoimentos de clientes</p> 
+    <h3 class="section-title">
+       A Pearson Hardman resolveu meu caso muito rápido, recomendo a todos 
+    </h3>
+    <div class="author">
+        <div class="author-info">
+            <p class="author-name">Jhon Doe</p>
+            <p class="author-job">CEO da Empresa X</p>
+        </div>
+        <img src="./assets/images/author_1.jpg" alt="Jhon Doe">    
+        </div>
+
+        <h3 class="section-title">
+         O melhor escritorio que eu já contratei, conseguimos resolver um caso que durava décadas.
+         </h3>
+         <div class="author">
+             <div class="author-info">
+                 <p class="author-name">Paul Clinton</p>
+                 <p class="author-job">Gerente de Projetos</p>
+                </div>
+             <img src="./assets/images/author_2.jpg" alt="Paul Clino">    
+             </div>
+</div>
+<div id="testimial-image-container" class="image-container">
+    <i class="bi bi-quote"></i>
+    <img src="./assets/images/court.jpg" alt="Advogado em um tribunal">
+</div>
+   </section>
+
+<!-- colaboradores -->
+<section id="team">
+
+<span class="square"></span>
+<h2>A <span> Pearson Hardman</span> Tem um time de especialistas a sua disposição</h2>
+<div class="employees">
+    <div class="employee">
+<img src="./assets/images/mike.jpg" alt="Mik Roos">
+<p class="employee-name">Mike Ross</p>
+<p class="employee-role">Advogado</p>
+    </div>
+    <div class="employee">
+        <img src="./assets/images/harvey.png" alt="harvey">
+        <p class="employee-name">Harvey Specter</p>
+        <p class="employee-role">Advogado Sênior</p>
+            </div>
+ 
+            <div class="employee">
+                <img src="./assets/images/louis.jpg" alt="Louis">
+                <p class="employee-name">Louis Litt</p>
+                <p class="employee-role">Advogado</p>
+                    </div>
+                    <div class="employee">
+                        <img src="./assets/images/jessica.jpg" alt="Louis">
+                        <p class="employee-name">jessica Pearson</p>
+                        <p class="employee-role">CEO</p>
+                            </div>
+
+</div>
+</section>
+
+<!-- contato -->
+<section id="contact" class="text-image-section">
+<div id="contact-image-container" class="image-container">
+<img src="./assets/images/office.jpg" alt="Advogados no escritorio">
+</div>
+
+<div id="contact-information" class="text-container">
+ <i class="bi bi-envelope"></i>
+
+  <p class="section-subtitle">Entre em contato</p> 
+<form action="">
+    <div class="form-control">
+        <input type="text" name="name" id="name" placeholder="Nome"/>
+        <input type="email" name="email" id="name" placeholder="E-mail"/>
+    </div>
+    <input type="text" name="phone" id="phone" placeholder="Telefone"/>
+    <textarea name="Message" id="Message" placeholder="Sua message ..."></textarea>
+    <input type="text" value="Enviar" class="btn">
+</form>
+</div>
+
+</section>
     <footer></footer>
 </body>
 </html>
