--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
     <a href="#contact">Contato</a>
             </nav>
 <!-- menu mobile -->
+<i class="bi bi-list" id="menu"></i>
+<nav id="mobile-navbar">
+    <i class="bi bi-x-lg" id="close-menu"></i>
+
+    <!-- cabeçalho e banner -->
+    <a href="#header">Início</a>
+    <a href="#expertise-areas">Serviços</a>
+    <a href="#about">Sobre</a>
+    <a href="#team">Time</a>
+    <a href="#contact">Contato</a>
+            </nav>
+
         </div>
   <div class="banner active">
     <!-- quadrado -->
@@ -214,11 +226,58 @@
     </div>
     <input type="text" name="phone" id="phone" placeholder="Telefone"/>
     <textarea name="Message" id="Message" placeholder="Sua message ..."></textarea>
-    <input type="text" value="Enviar" class="btn">
+    <input type="submit" value="Enviar" class="btn"/>
 </form>
 </div>
-
 </section>
-    <footer></footer>
+    <footer id="footer">
+<div class="contact-info">
+    <div class="footer-brand">
+        <h2>Person Hardman</h2>
+    <p>O Advogado certo para sua empresa</p>
+    </div>
+    <p><i class="bi bi-geo-alt"></i>Rua dos Advogados,1415</p>
+    <p><i class="bi bi-telephone"></i>(99) 9999-9999</p>
+     <p><i class="bi bi-envelope"></i>contato@personhardman.com</p>
+     
+     <div class="social-networks">
+        <p>Siga-nos:</p>
+        <div class="networks">
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-twitter"></i></a>
+        <a href="#"><i class="bi bi-linkedin"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a> 
+    </div>  
+     </div>
+</div>
+<div class="links-container">
+    <h4>Outros Serviços</h4>
+    <nav>
+      <a href="#">Propriedade Intelectual</a>
+      <a href="#">LGPD</a>
+      <a href="#">Direito internacional</a>
+      <a href="#">Processos</a>
+    </nav>
+</div>
+<div class="links-container">
+    <h4>Páginas</h4>
+    <nav>
+      <a href="#">Termos e condições</a>
+      <a href="#">Politica de privacidade</a>
+      <a href="#">Fale com um especialista</a>
+      <a href="#">FAQ</a>
+    </nav>
+</div>
+<div class="links-container">
+    <h4>CONSULTAS GRÁTIS</h4>
+    <div class="phone-number">
+    <i class="bi bi-telephone"></i>
+    <p>
+        (99) 9999-9999
+    </p>
+</div>
+    <P class="phone-info">Este telefone é especial para tratar de casos já em andamento</P>
+</div>
+</footer>
 </body>
 </html>
