--- a/index.html
+++ b/index.html
@@ -7,22 +7,28 @@
    
     <title>Pearson Hardman</title>
 <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-<!-- Estilos -->
-    <link rel="stylesheet" href="./assets/css/style.css">
 <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:wght@700;900&display=swap" rel="stylesheet">
 
-<!-- Bootstrap icons (biblioteca de icones)  -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+<!-- Bootstrap ícone (biblioteca de ícones)  -->
+<link rel="stylesheet"
+ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
+ <!-- Estilos -->
+ <link rel="stylesheet" href="./assets/css/style.css">
+<!-- javascript -->
+<!-- defer espera o html carregar primeiro -->
+<script src="/assets/js/scripts.js" defer></script>
 </head>
+
 <body>
     
-      <header>
-        <div id="inner-header">
-            <h2 id="brand">Person Hardman</h2>
-            <nav id="navbar">
+      <header id="header">
+ <div id="inner-header">
+   <h2 id="brand">Person Hardman</h2>
+     <nav id="navbar">
     <!-- cabeçalho e banner -->
     <a href="#header">Início</a>
     <a href="#expertise-areas">Serviços</a>
@@ -30,9 +36,9 @@
     <a href="#team">Time</a>
     <a href="#contact">Contato</a>
             </nav>
-<!-- menu mobile -->
+<!-- Menu mobile -->
 <i class="bi bi-list" id="menu"></i>
-<nav id="mobile-navbar">
+<nav id="mobile-navbar" class="menu-active">
     <i class="bi bi-x-lg" id="close-menu"></i>
 
     <!-- cabeçalho e banner -->
@@ -51,6 +57,20 @@
     <p>Os advogados mais bem qualificados estão aqui, agende uma reunião e conheça nosso time</p>
 </div>
    
+<div class="banner">
+    <span class="square"></span>
+    <h2>Conheça o nosso time</h2>
+    <p>Veja as especialidades dos nossos advogados, e entenda como eles pode lhe ajudar</p>
+</div>
+
+<div class="banner">
+    <span class="square"></span>
+    <h2>Os nossos resultados</h2>
+    <p>Confira as nossas métricas e conheça os resultados que já obtivemos </p>
+</div>
+
+
+
     <div class="dots">
     <div class="dot active"></div>
     <div class="dot"></div>
@@ -243,10 +263,10 @@
      <div class="social-networks">
         <p>Siga-nos:</p>
         <div class="networks">
-        <a href="#"><i class="bi bi-facebook"></i></a>
-        <a href="#"><i class="bi bi-twitter"></i></a>
-        <a href="#"><i class="bi bi-linkedin"></i></a>
-        <a href="#"><i class="bi bi-instagram"></i></a> 
+        <a href="https://pt-br.facebook.com/"><i class="bi bi-facebook"></i></a>
+        <a href="https://twitter.com"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.linkedin.com/home"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a> 
     </div>  
      </div>
 </div>
